fine, `.getFirst()` not available until Java 21